# TemplateProject

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  run.sh
src/: CMakeLists.txt  driver.cpp  template.cpp  template.hpp.in  utils.hpp
src/tests/: CMakeLists.txt  TemplateTests.cpp
